UI界面层OK，这个大佬写法真专业，好的项目真是让人受益匪浅！

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
     defaultConfig {
         applicationId "com.jetgame.tetris"
         minSdk 21
+        //noinspection ExpiredTargetSdkVersion
         targetSdk 32
         versionCode 1
         versionName "1.0"
